# matrip

./: .gitignore  docker-compose.yaml  pyproject.toml  pytest.ini
dockerfile/: Dockerfile
matrip/: __init__.py  matrip.peg  matrip.py
tests/: test_matrip.py
