[tool.poetry]
name = "matrip"
version = "0.1.0"
description = ""
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.rst"

repository = "https://github.com/sonesuke/matrip"
homepage = "https://github.com/sonesuke/matrip"

[tool.poetry.dependencies]
python = "^3.7"
Arpeggio = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0.4"
ipython = "^7.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
